adjustet the UserMapper for the CoachMemberEntity